--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "dependencies": {
     "@altinn/figma-design-tokens": "^6.0.1",
-    "@digdir/design-system-react": "^0.11.2",
+    "@digdir/design-system-react": "^0.12.1",
     "@digdir/design-system-tokens": "^0.0.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -14,11 +14,12 @@
     "@types/node": "^16.18.25",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
-    "enheter": "^1.0.10",
+    "enheter": "^1.0.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "tomas-react-tools": "^0.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
