--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "dependencies": {
     "@altinn/figma-design-tokens": "^6.0.1",
-    "@digdir/design-system-react": "^0.12.1",
-    "@digdir/design-system-tokens": "^0.0.3",
+    "@digdir/design-system-react": "^0.24.0",
+    "@digdir/design-system-tokens": "^0.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,11 +15,13 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "enheter": "^1.0.27",
+    "i18next": "^23.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.2",
     "react-scripts": "5.0.1",
+    "tomas-react-tools": "^0.1.37",
     "typescript": "^4.9.5",
-    "tomas-react-tools": "^0.1.24",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
